# morning_shift

./: .ccls  .clang-format  .gitignore  README.md  meson.build
.github/workflows/: codeql-analysis.yml
data/: meson.build  settings.ini
include/: application.h  meson.build
include/config/: config.h
include/mc/: client.h  connection.h  messageids.h
include/network/: connectionprovider.h  session.h  tsdeque.h
include/utils/: mc.h  timer.h
src/: application.cpp  main.cpp  meson.build
src/config/: config.cpp  meson.build
src/logs/: meson.build
src/mc/: cartographer.cpp  cartographer.h  client.cpp  clientimpl.cpp  clientimpl.h  connection.cpp  meson.build  messageids.h  messages.h  messagestack.cpp  messagestack.h  nbt.h  ownercallbacks.h  serialization.h  stringarchive.h  types.h
src/network/: connectionprovider.cpp  meson.build  session.cpp  tsdeque.cpp
src/utils/: mc.cpp  meson.build
unittests/: example.cpp  meson.build  signaling.cpp  varint.cpp
